--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
             </svg>
             github/fasciste
           </a>
-          <a href="https://tryhackme.com/p/DataverseCS" class="cta-btn cta-primary" target="_blank" rel="noopener">
+          <a href="https://tryhackme.com/p/fasciste" class="cta-btn cta-primary" target="_blank" rel="noopener">
             <svg width="15" height="15" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
               <path d="M10.705 0C7.54 0 4.902 2.285 4.902 5.556c0 .113.008.225.016.337-2.44.778-4.254 3.122-4.254 5.785 0 3.37 2.685 6.1 5.996 6.1H19.34C21.89 17.778 24 15.63 24 12.988c0-2.34-1.607-4.326-3.797-4.86.024-.225.04-.454.04-.685C20.243 3.34 16.951 0 12.914 0h-2.209zm0 1.488h2.21c3.231 0 5.84 2.646 5.84 5.955 0 .387-.04.766-.113 1.133l-.153.79.798.12c1.782.274 3.143 1.84 3.143 3.612 0 2.01-1.605 3.647-3.59 3.647H6.66c-2.435 0-4.508-2.097-4.508-4.612 0-2.258 1.573-4.209 3.693-4.526l.903-.137-.09-.91a4.58 4.58 0 0 1-.04-.556c0-2.394 1.895-4.516 4.088-4.516z"/>
             </svg>
-            tryhackme/DataverseCS
+            tryhackme/fasciste
           </a>
         </div>
       </div>
@@ -278,7 +278,7 @@
           <span class="link-arrow">→</span>
         </a>
 
-        <a href="https://tryhackme.com/p/DataverseCS" class="link-card" target="_blank" rel="noopener">
+        <a href="https://tryhackme.com/p/fasciste" class="link-card" target="_blank" rel="noopener">
           <div class="link-card-sweep" style="--accent: var(--green)"></div>
           <div class="link-icon" style="color: var(--green)">
             <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
@@ -287,7 +287,7 @@
           </div>
           <div class="link-info">
             <span class="link-platform">TryHackMe</span>
-            <span class="link-handle">DataverseCS</span>
+            <span class="link-handle">fasciste</span>
           </div>
           <span class="link-arrow">→</span>
         </a>
