--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>fasciste — Full-Stack Developer & Forensics Student</title>
+  <title>kyvran — Full-Stack Developer & Forensics Student</title>
   <meta name="description" content="Full-Stack Developer. Digital Forensics & IR student. Building secure software, breaking the rest." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +17,7 @@
 
   <nav class="nav" id="nav">
     <div class="nav-prompt">
-      <span class="c-green">fasciste</span><span class="c-dim">@</span><span
+      <span class="c-green">kyvran</span><span class="c-dim">@</span><span
         class="c-blue">void</span><span class="c-dim">:</span><span
         class="c-mauve">~</span><span class="c-dim"> $</span>
     </div>
@@ -40,7 +40,7 @@
           <div class="avatar-ring"></div>
           <img
             src="https://avatars.githubusercontent.com/u/262564619?v=4"
-            alt="fasciste"
+            alt="kyvran"
             class="avatar-img"
           />
           <span class="avatar-status" aria-hidden="true"></span>
@@ -53,7 +53,7 @@
           <span class="c-dim">root@void:~ $<span class="cursor-blink"></span></span>
         </div>
 
-        <h1 class="hero-name" data-text="fasciste">fasciste</h1>
+        <h1 class="hero-name" data-text="kyvran">kyvran</h1>
 
         <div class="hero-roles">
           <span class="role-badge" style="--accent: var(--blue)">Full-Stack Developer</span>
@@ -66,17 +66,17 @@
         </p>
 
         <div class="hero-cta">
-          <a href="https://github.com/fasciste" class="cta-btn cta-secondary" target="_blank" rel="noopener">
+          <a href="https://github.com/kyvran" class="cta-btn cta-secondary" target="_blank" rel="noopener">
             <svg width="15" height="15" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
               <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
             </svg>
-            github/fasciste
+            github/kyvran
           </a>
-          <a href="https://tryhackme.com/p/fasciste" class="cta-btn cta-primary" target="_blank" rel="noopener">
+          <a href="https://tryhackme.com/p/kyvran" class="cta-btn cta-primary" target="_blank" rel="noopener">
             <svg width="15" height="15" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
               <path d="M10.705 0C7.54 0 4.902 2.285 4.902 5.556c0 .113.008.225.016.337-2.44.778-4.254 3.122-4.254 5.785 0 3.37 2.685 6.1 5.996 6.1H19.34C21.89 17.778 24 15.63 24 12.988c0-2.34-1.607-4.326-3.797-4.86.024-.225.04-.454.04-.685C20.243 3.34 16.951 0 12.914 0h-2.209zm0 1.488h2.21c3.231 0 5.84 2.646 5.84 5.955 0 .387-.04.766-.113 1.133l-.153.79.798.12c1.782.274 3.143 1.84 3.143 3.612 0 2.01-1.605 3.647-3.59 3.647H6.66c-2.435 0-4.508-2.097-4.508-4.612 0-2.258 1.573-4.209 3.693-4.526l.903-.137-.09-.91a4.58 4.58 0 0 1-.04-.556c0-2.394 1.895-4.516 4.088-4.516z"/>
             </svg>
-            tryhackme/fasciste
+            tryhackme/kyvran
           </a>
         </div>
       </div>
@@ -114,7 +114,7 @@
               <span>6</span><span>7</span><span>8</span><span>9</span><span>10</span>
               <span>11</span><span>12</span>
             </div>
-            <pre class="code-block"><span class="s-kw">const</span> <span class="s-var">fasciste</span> <span class="s-op">=</span> {
+            <pre class="code-block"><span class="s-kw">const</span> <span class="s-var">kyvran</span> <span class="s-op">=</span> {
     <span class="s-key">role</span><span class="s-op">:</span>              <span class="s-str">"Full-Stack Developer"</span><span class="s-op">,</span>
     <span class="s-key">education</span><span class="s-op">:</span>         <span class="s-str">"Digital Forensics &amp; IR"</span><span class="s-op">,</span>
     <span class="s-key">languages</span><span class="s-op">:</span>         [<span class="s-str">"Rust"</span><span class="s-op">,</span> <span class="s-str">"Python"</span><span class="s-op">,</span> <span class="s-str">"PHP"</span><span class="s-op">,</span> <span class="s-str">"JS"</span>]<span class="s-op">,</span>
@@ -264,7 +264,7 @@
         <div class="section-rule"></div>
       </div>
       <div class="links-grid">
-        <a href="https://github.com/fasciste" class="link-card" target="_blank" rel="noopener">
+        <a href="https://github.com/kyvran" class="link-card" target="_blank" rel="noopener">
           <div class="link-card-sweep" style="--accent: var(--blue)"></div>
           <div class="link-icon">
             <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
@@ -273,12 +273,12 @@
           </div>
           <div class="link-info">
             <span class="link-platform">GitHub</span>
-            <span class="link-handle">@fasciste</span>
+            <span class="link-handle">@kyvran</span>
           </div>
           <span class="link-arrow">→</span>
         </a>
 
-        <a href="https://tryhackme.com/p/fasciste" class="link-card" target="_blank" rel="noopener">
+        <a href="https://tryhackme.com/p/kyvran" class="link-card" target="_blank" rel="noopener">
           <div class="link-card-sweep" style="--accent: var(--green)"></div>
           <div class="link-icon" style="color: var(--green)">
             <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
@@ -287,7 +287,7 @@
           </div>
           <div class="link-info">
             <span class="link-platform">TryHackMe</span>
-            <span class="link-handle">fasciste</span>
+            <span class="link-handle">kyvran</span>
           </div>
           <span class="link-arrow">→</span>
         </a>
@@ -297,7 +297,7 @@
 
   <footer class="footer">
     <div class="footer-inner">
-      <span class="c-green">fasciste@void:~$</span>
+      <span class="c-green">kyvran@void:~$</span>
       <span class="c-dim"> Built with passion &amp; caffeine</span>
     </div>
     <a href="#hero" class="footer-top" aria-label="Back to top">↑</a>
